# VisionFlow

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  run_dev.sh
.antigravity/: instructions.md
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
assets/: active_pipeline.json  active_pipeline.layout.json  config.json  imgui.ini  pipeline.json  ui_layout.json
core/: CMakeLists.txt
core/include/core/: blackboard.hpp  condition_evaluator.hpp  engine.hpp  factory.hpp  module_metadata.hpp  type_system.hpp
core/include/utils/: global_config.hpp  logger.hpp
core/src/core/: engine.cpp  factory.cpp
core/src/utils/: global_config.cpp  logger.cpp
include/: blackboard.hpp  engine.hpp  factory.hpp  node_manager.hpp  ui_manager.hpp
modules/: CMakeLists.txt
modules/include/modules/: bounding_box_detector.hpp  color_converter.hpp  condition_node.hpp  edge_detector.hpp  image_merger.hpp  image_source.hpp  loop_node.hpp  ui_display.hpp
modules/src/modules/: bounding_box_detector.cpp  color_converter.cpp  condition_node.cpp  edge_detector.cpp  generate_node.cpp  image_merger.cpp  image_source.cpp  log_node.cpp  loop_node.cpp  ui_display.cpp
scripts/: build_docker.sh  build_third_party.sh  fetch_third_party_deps.sh  run_dev.sh  run_format.sh
src/: engine.cpp  factory.cpp  main.cpp  node_manager.cpp  ui_manager.cpp  ui_nodes.cpp
tests/: CMakeLists.txt  test_evaluator.cpp  test_loop.cpp
ui/: CMakeLists.txt
ui/include/ui/: node_manager.hpp  texture_manager.hpp  ui_manager.hpp
ui/src/ui/: main.cpp  node_manager.cpp  texture_manager.cpp  ui_manager.cpp
